--- a/client-deployment.yaml
+++ b/client-deployment.yaml
@@ -1,4 +1,4 @@
-apiversion: apps/v1
+apiVersion: apps/v1
 kind: Deployment
 metadata: 
   name: client-deployment
@@ -13,7 +13,7 @@ spec:
         component: web
     spec: 
       containers:
-        - name: client
+        - name: clienv
           image: stephengrider/multi-client    
           ports:
-            - containerPort: 3000       
+            - containerPort: 9999       
